--- a/text/projekt-01-kapitoly-chapters.tex
+++ b/text/projekt-01-kapitoly-chapters.tex
@@ -34,6 +34,8 @@ Pro potřeby simulací jsou využívány především dynamické systémy, u kte
 \subsection{Simulace}
 Simulace je disciplína zabývající se získáváním informací z modelů pomocí provádení experimentů s nimi. Pro získání validních informací o modelu je potřeba provést simulaci vícekrát a následně porovnat a vyhodnotit výsledné hodnoty. 
 
+Před během simulace a po vyhodnocení výsledků je vhodné provést analýzu vhodnosti modelu pro simulaci. Pokud shledáme model nevalidním, není vhodný pro náš záměr.
+
 \chapter{Popis simulačních nástrojů}
 \label{kapitola3}
 
@@ -48,6 +50,10 @@ Simulace je disciplína zabývající se získáváním informací z modelů pom
 
 \chapter{Závěr}
 \label{kapitola7}
+
+
+%===============================================================================
+
 
 
 % \chapter{Abstrakt}
