--- a/text/projekt-01-kapitoly-chapters.tex
+++ b/text/projekt-01-kapitoly-chapters.tex
@@ -74,7 +74,12 @@ Jazyků umožňujících vytváření a specifikaci modelů a provádení experi
 \subsection{MATLAB}
 Jazyk MATLAB je uzavřený skriptovací jazyk, který je vyvíjený a spravovaný firmou MathWorks od roku 1984. Tento jazyk je spjatý se stejnojmenným simulačním nástrojem MATLAB. Jazyk je využíván k popisu analýzy dat, k návrhu a implementaci algoritmů a také k vytváření modelů a provádění operací (simulací) s nimi. Jazyk MATLAB se vyznačuje velmi slabou typovou kontrolu a také tím, že se všemi objekty je pracováno jako s maticemu, v případě jednořádkové matice, vektoru, je s práce s touto maticí shodná s prací s polem hodnot. Většina vestavěných funkcí je pro tento účel naprogramována a očekává na svém vstupu právě matici. Syntax zápisu kódu v MATLABu připomíná kterýkoliv jiný funkcionální jazyk. Jazyk MATLAB podporuje také objektově orientované programování. Pro účely zpracování a analýzy získaných výsledků dává jazyk možnost vykreslit grafy. Všechny výsledky simulací v této práci, které jsou provedeny v MATLABu, mají vykreslené grafy právě tímto nástrojem. Výsledky můžete nalézt v kapitole \ref{kapitola6}. Prostředí MATLABu je navrženo tak, že navíc dokáže pracovat s funkcemi napsanými v jazyce C a Fortran. Zároveň má jazyk možnost využít knihovny napsané v jiných jazycích, jako jsou například Java, .NET nebo Perl.
 % @TODO: obrazek MATLAB (tak na milion znaku)
-\includegraphics[width=15cm]{obrazky-figures/dummy.png}
+\begin{figure}
+    \centering
+    \includegraphics[width=15cm]{obrazky-figures/dummy.png}
+    \caption{Ukázka prostředí MATLAB}
+    \label{fig:my_label}
+\end{figure}
 
 Tento programovací jazyk byl vybrán kvůli rozšířenosti na středních a vysokých školách, ale také na různých pracovištích zabývajícími se modelováním a simulacemi. Navzdory tomu, že nástroj MATLAB není volně dostupný, na trhu jsou k dostání volně dostupné nástroje, jako například GNU Octave a SciLab, které jsou s jazykem MATLAB kompatibilní. Dále pro MATLAB existuje rozšíření SIMULINK, které do prostředí MATLABu přidává možnost provádět vícerozměrné grafické simulace. Také tyto nástroje jsou ve výběru nástrojů využitých v této bakalářské práci.
 
@@ -84,7 +89,7 @@ Jazyk MATLAB bohužel není volně dostupný, nicméně v akademickém prostřed
 \subsection{Modelica}
 Jazyk Modelica je objektově orientovaný, modelační a simulační jazyk, který je vyvíjen neziskovou organizací Modelca Association od roku 1997. Díky tomu, že je tento jazyk volně dostupný, je na trhu mnoho simulačních nástrojí a vývojových prostředí, které pracují právě s tímto jazykem. Pro účely této práce byly vybrány nástoje Dymola, OpenModelica a jModelica.org. Vývojové prostředí Dymola není, stejně jako MATLAB, volně dostupné. Pro účely provádění experimentů s tímto vývojovým prostředím je využita licence, pomocí které je možno spustit nástroj Dymola na školním serveru Merlin v rámci VUT FIT.
 
-Modely, které jsou zapsány v jazyku Modelica, mají veškeré své chování popsané rovnicemi. Například rovnice, který má matematický zápis:
+Modely, které jsou zapsány v jazyku Modelica, mají veškeré své chování popsané rovnicemi. Například rovnice Newtonova zákona ochlazování, který má matematický zápis:
 
 $$
 mc_p\Dot{T} = hA(T_{\infty} - T)
@@ -103,7 +108,7 @@ Jazyk je v současnosti velmi využíván v oblasti proudění kapalin a termody
 \begin{figure}
     \centering
     \includegraphics[width=15cm]{obrazky-figures/dummy.png}
-    \caption{Caption}
+    \caption{Ukázka prostředí jModelica.org}
     \label{fig:my_label}
 \end{figure}
 
@@ -111,15 +116,21 @@ Stejně jako jazyk MATLAB, i Modelica podporuje grafický přehled výsledků po
 
 
 \subsection{Python}
+Python je volně dostupný interpretovaný programovací jazyk, který má nepřeberné množství využití. Poprvé byl představen v roce 1991. Jazyk Python není v základním pojetí simulačním nebo modelačním jazykem. Tuto funkcionalitu získává teprve s dodatečnými knihovnami. V rámci využití v této bakalářské práci byla vybrána rodina knihoven SciPy. Hlavním přínosem této rodiny knihoven je možnost použití metod integrace, lineární algebry, rychlé Fourierovy transformace a řešení diferenciálních rovnic.
 
+Tento jazyk byl zvolen z důvodu, který byl řečený výše. Python nemá primární použití jako jazyk vhodný pro modelování a simulace. Nicméně s jeho rostoucí popularitou a rostoucí uživatelskou základnou, bude jeho využití růst ještě více. Momentálně má Python velmi široký záběr pokrytí - od funkcionální, přes logické programování, až po tvorbu grafiky, databází, nebo provádění simulací. Jazyk je využíván velkými firmami na trhu, jako jsou například Google, NASA nebo Wikipedia.
+
+Stejně jako u jazyků MATLAB a Modelica jsou grafy vykreslené v jazyce Python využity k zobrazování výsledků simulací v kapitole \ref{kapitola6}
 
 \section{Popis použitých simulačních nástrojů}
+Zde nevím, jestli by toto měla být samostatná kapitola, nebo podkapitola \ref{kapitola3}, nebo jestli tuto část klidně vynechat a raději sem dát podkapitolu o srovnávací metodice (která má samostatnou kapitolu, viz kapitola \ref{kapitola5})
 
 \chapter{Implementace modelů}
 \label{kapitola4}
 
 \chapter{Porovnání}
 \label{kapitola5}
+Měl by popis srovnávací metodiky být zde, nebo v kapitole \ref{kapitola2}?
 
 \chapter{Výsledky porovnání}
 \label{kapitola6}
